    (choose Edit/Preferences, then click the `Defaults' tab)

  * A lists of recently used instrument files, directories,
    database instruments, database directories are now available
    for quick access, where appropriate.

  * The locations of the last loaded instrument, last scanned
    instrument/directory, last added instrument to orchestra are
    now saved for the next session

  * Implemented automatic scrolling when new channel is created to
    ensure that it is visible on the screen

  * Added context menu to the orchestra's instrument table with
    commands for editing an instrument, deleting an instrument,
    loading an instrument to a sampler channel and adding an
    instrument to MIDI instrument map

  * Implemented more proper retrieval of the MIDI/audio driver settings

  * Implemented some UI enhancements for speeding up the
    MIDI instrument mapping process

  * Implemented new table cell editor for editing string list
    parameters with possibilities

  * Fantasia:
    - Added scrollbar to the channels pane
    - Added new menu items: Edit/Add Channel, Edit/Create MIDI Device,
      Edit/Create Audio Device, View/Toolbar, View/Side Pane,
      View/Devices Pane
    - Added button to the channel screen for starting an instrument editor
      (point the mouse cursor over the channel screen and click 'Edit')

  * Bug fixes:
    - fixed bug #49
    - the first loaded script was not always been executed
    - some javadoc documentation fixes
    - some minor bugfixes

JSampler v0.6a: 2007-08-10
  * The Fantasia distribution is now capable of
    controlling all features available in LinuxSampler

  * Refactoring: all common UI components are moved
    to a new package - org.jsampler.view.std

  * Some GUI enhancements, bugfixes and code cleanup.

JSampler v0.5a: 2007-05-24
  * Implemented instruments database support
  * Added context menu to the MIDI instrument tree

JSampler v0.4a: 2007-04-02
  * Added support for MIDI instrument mapping
