@@ -15,6 +15,7 @@ AudioDevicesTableModel.channels = Channels
 ChangeTabTitleDlg = Change Tab Title
 ChangeTabTitleDlg.lTitle = New Title:
 
+Channel.btnEdit.tt = Edit loaded instrument
 Channel.btnInstr = Load Instrument...
 Channel.loadingInstrument = Loading Instrument... ({0}%)
 Channel.errorLoadingInstrument = Failed to load instrument
