@@ -9,6 +9,7 @@ Channel.ttDefault = Using the default map: {0}
 
 ChannelOptions.routing = Channel Routing
 
+ChannelScreen.btnEditInstr.tt = Edit loaded instrument
 ChannelScreen.errorLoadingInstrument = Failed to load instrument!
 ChannelScreen.loadingInstrument = Loading Instrument... ({0}%)
 ChannelScreen.volume = {0}%
